syntax = "proto3";

package classer.v1;

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "validate/validate.proto";


option go_package = "class/api/classer/v1;v1";

service Classer {
    //获取课表
    rpc GetClass (GetClassRequest) returns (GetClassResponse) {
        option (google.api.http) = {
            get: "/class/get/{stu_id}/{year}/{semester}"
        };
    }
    //添加课程
    rpc AddClass(AddClassRequest) returns (AddClassResponse) {
        option (google.api.http) = {
            post: "/class/add"
            body: "*"
        };
    }
    //删除课程
    rpc DeleteClass(DeleteClassRequest) returns (DeleteClassResponse) {
        option (google.api.http) = {
            delete: "/class/delete/{stuId}/{year}/{semester}/{id}"
        };
    }
    //更新课程
    rpc UpdateClass(UpdateClassRequest) returns (UpdateClassResponse) {
        option (google.api.http) = {
            put: "/class/update"
            body: "*"
        };
    }
    //获取回收站的课程(回收站的课程只能保存2个月)
    rpc GetRecycleBinClassInfos(GetRecycleBinClassRequest) returns (GetRecycleBinClassResponse) {
        option (google.api.http) = {
            get: "/class/recycle/{stuId}/{year}/{semester}"
        };
    }
    //恢复课程
    rpc RecoverClass(RecoverClassRequest) returns (RecoverClassResponse) {
        option (google.api.http) = {
            put: "/class/recover"
            body: "*"
        };
    }
    rpc GetSchoolDay(GetSchoolDayReq) returns (GetSchoolDayResp) {
        option (google.api.http) = {
            get: "/class/day/get"
        };
    };


    //获取所有课程信息(为其他服务设置的)
    rpc GetAllClassInfo(GetAllClassInfoRequest) returns (GetAllClassInfoResponse) {};
    //获取教学班中的所有学生ID
    rpc GetStuIdByJxbId(GetStuIdByJxbIdRequest) returns (GetStuIdByJxbIdResponse){};

}

message GetClassRequest {
//    //周几的课表
//    int64 week=1 [json_name = "week",(validate.rules).int64 = {gt: 0},(google.api.field_behavior) = REQUIRED];
    //学号
    string stu_id=1 [json_name = "stu_id",(validate.rules).string = {min_len: 10, max_len: 10},(google.api.field_behavior) = REQUIRED];
    // 学期
    string semester=2 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1},(google.api.field_behavior) = REQUIRED];
    //学年
    string year=3 [json_name = "year",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];

    //是否直接从学校官网爬取
    bool refresh = 4;
}
message GetClassResponse {
    //课表
    repeated Class classes=1[json_name = "classes"];
}


message AddClassRequest {
    //学号
    string stu_id=1 [json_name = "stu_id",(validate.rules).string = {min_len: 10, max_len: 10},(google.api.field_behavior) = REQUIRED];
    //课程名称
    string name=2 [json_name = "name",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //第几节 '形如 "1-3","1-1"'
    string dur_class=3 [json_name = "dur_class",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //地点
    string where=4 [json_name = "where",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //教师
    string teacher=5 [json_name = "teacher",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //哪些周
    int64  weeks=6 [json_name = "weeks",(validate.rules).int64 = {gt: 0},(google.api.field_behavior) = REQUIRED];
    // 学期
    string semester=7 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1},(google.api.field_behavior) = REQUIRED];
    //学年
    string year=8 [json_name = "year",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //星期几
    int64 day=9 [json_name = "day",(validate.rules).int64 = {gte: 1, lte: 7},(google.api.field_behavior) = REQUIRED];
    //学分
    optional double credit=10[json_name = "credit"];
}

message AddClassResponse {
    //添加的课程ID
    string id=1 [json_name = "id"];
    string msg=2 [json_name = "msg"];
}

message DeleteClassRequest {
    //要被删的课程id
    string id=1 [json_name = "id",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //学号
    string stuId=2 [json_name = "stu_id",(validate.rules).string = {min_len: 10, max_len: 10},(google.api.field_behavior) = REQUIRED];
    //学年  "2024" -> 代表"2024-2025学年"
    string year=3 [json_name = "year",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //学期 "1"代表第一学期，"2"代表第二学期，"3"代表第三学期
    string semester=4 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1},(google.api.field_behavior) = REQUIRED];
}
message DeleteClassResponse {
    string msg=1[json_name = "msg"];
}
message UpdateClassRequest {
    //学号
    string stu_id=1 [json_name = "stu_id",(validate.rules).string = {min_len: 10, max_len: 10},(google.api.field_behavior) = REQUIRED];
    //课程名称
    optional string name=2 [json_name = "name",(validate.rules).string = {min_len: 1}];
    //第几节 '形如 "1-3","1-1"'
    optional string dur_class=3 [json_name = "dur_class",(validate.rules).string = {min_len: 1}];
    //地点
    optional string where=4 [json_name = "where",(validate.rules).string = {min_len: 1}];
    //教师
    optional string teacher=5 [json_name = "teacher",(validate.rules).string = {min_len: 1}];
    //哪些周
    optional int64  weeks=6 [json_name = "weeks",(validate.rules).int64 = {gt: 0}];
    // 学期
    string semester=7 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1},(google.api.field_behavior) = REQUIRED];
    //学年
    string year=8 [json_name = "year",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //星期几
    optional int64 day=9 [json_name = "day",(validate.rules).int64 = {gte: 1, lte: 7}];
    //学分
    optional double credit=10[json_name = "credit"];
    // 课程的ID（唯一标识） 更新后这个可能会换，所以响应的时候会把新的ID返回
    string classId=11 [json_name = "id",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];

}
message UpdateClassResponse {
    string msg=1[json_name = "msg"];
    //更新后的课程的ID（唯一标识）
    string classId=2 [json_name = "id"];
}
message GetAllClassInfoRequest {
    //学年  "2024" 代表"2024-2025学年"
    string year=1 [json_name = "year",(validate.rules).string = {min_len: 1}];
    //学期 "1"代表第一学期，"2"代表第二学期，"3"代表第三学期
    string semester=2 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1}];

    //避免一次性获取太多class[每次只获取100个]
    //最后一个课程的时间戳，时区为UTC
    // "2023-09-03T01:01:01"
    string cursor =3;

}
message GetAllClassInfoResponse {
    repeated ClassInfo class_infos = 1[json_name = "class_infos"];
    //最后一个课程的时间戳，时区为UTC
    // "2023-09-03T01:01:01"
    string lastTime = 2;
}
message GetRecycleBinClassRequest{
    //学号
    string stuId=1 [json_name = "stu_id",(validate.rules).string = {min_len: 10, max_len: 10},(google.api.field_behavior) = REQUIRED];
    //学年  "2024" 代表"2024-2025学年"
    string year=2 [json_name = "year",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //学期 "1"代表第一学期，"2"代表第二学期，"3"代表第三学期
    string semester=3 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1},(google.api.field_behavior) = REQUIRED];
}
message GetRecycleBinClassResponse {
    //回收站的课程
    repeated ClassInfo class_infos = 1[json_name = "class_infos"];
}
message RecoverClassRequest {
    //学号
    string stuId=1 [json_name = "stu_id",(validate.rules).string = {min_len: 10, max_len: 10},(google.api.field_behavior) = REQUIRED];
    //学年  "2024" 代表"2024-2025学年"
    string year=2 [json_name = "year",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
    //学期 "1"代表第一学期，"2"代表第二学期，"3"代表第三学期
    string semester=3 [json_name = "semester",(validate.rules).string = {min_len: 1,max_len: 1},(google.api.field_behavior) = REQUIRED];
    // 课程的ID（唯一标识） 更新后这个可能会换，所以响应的时候会把新的ID返回
    string classId=11 [json_name = "id",(validate.rules).string = {min_len: 1},(google.api.field_behavior) = REQUIRED];
}
message RecoverClassResponse {
    string msg=1[json_name = "msg"];
}

message GetStuIdByJxbIdRequest{
    string jxb_id = 1;
}
message GetStuIdByJxbIdResponse{
    repeated string stu_id = 1;
}

message  ClassInfo {
    //星期几
    int64 day=1 [json_name = "day"];
    //任课教师
    string teacher=2 [json_name = "teacher"];
    //上课地点
    string where=3 [json_name = "where"];
    //上课是第几节（如1-2,3,4）
    string class_when=4 [json_name = "class_when"];
    //上课的周数(文字描述,如1-9周)
    string week_duration=5 [json_name = "week_duration"];
    //课程名称
    string classname=6 [json_name = "classname"];
    //学分
    double credit=7 [json_name = "credit"];
    //哪些周 这个是一个64位的数字,如果有第一周,那么该数的二进制从右往左的第一位为1,以此类推
    //比如该数的二进制是000000101,就代表第一周和第三周有课.
    int64 weeks=9 [json_name = "weeks"];
    //学期 "1"代表第一学期，"2"代表第二学期，"3"代表第三学期
    string semester=10 [json_name = "semester"];
    //学年  "2024" 代表"2024-2025学年"
    string year=11 [json_name = "year"];
    //课程唯一标识id
    string id=12 [json_name = "id"];
}

message Class {
    //课程信息
    ClassInfo info =1 [json_name = "class_info"];
//    //是否是本周
//    bool thisweek=2 [json_name = "this_week"];
}


message  GetSchoolDayReq {}

message GetSchoolDayResp {
    string holidayTime = 1; //形式:"2025-07-05"
    string schoolTime = 2;  //形式:"2025-02-17"
}